[gd_scene load_steps=3 format=3 uid="uid://b7rhqq1cqqjrn"]

[ext_resource type="Script" path="res://Scenes/SobreIa.gd" id="1_x1xgq"]
[ext_resource type="Texture2D" uid="uid://dr351jexyveot" path="res://assets/A_minimalistic_AI-themed_game_interface_in_dark_mo_converted.png" id="2_d222s"]

[node name="SobreIa" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_x1xgq")
metadata/_edit_lock_ = true

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_d222s")
metadata/_edit_lock_ = true

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_lock_ = true

[node name="Texto" type="TextEdit" parent="."]
layout_mode = 0
offset_left = 443.0
offset_top = 243.0
offset_right = 1043.0
offset_bottom = 642.0
wrap_mode = 1
metadata/_edit_lock_ = true

[node name="Botoes" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="BotInfo" type="VBoxContainer" parent="Botoes"]
layout_mode = 0
offset_left = 169.0
offset_top = 236.0
offset_right = 1363.0
offset_bottom = 870.0
theme_override_constants/separation = 5
metadata/_edit_lock_ = true

[node name="TreiSup" type="Button" parent="Botoes/BotInfo"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 25
text = "1. Treinamento supervisionado
"

[node name="Map" type="Button" parent="Botoes/BotInfo"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 25
text = "2. Mapeamento
"

[node name="PlanSeq" type="Button" parent="Botoes/BotInfo"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 25
text = "3. Planejamento sequencial
"

[node name="Classi" type="Button" parent="Botoes/BotInfo"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 25
text = "4. Classificação
"

[node name="CondBul" type="Button" parent="Botoes/BotInfo"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 25
text = "5. Condicionais e lógica booleana
"

[node name="LacRep" type="Button" parent="Botoes/BotInfo"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 25
text = "6. Laços de repetição
"

[node name="Agrup" type="Button" parent="Botoes/BotInfo"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 25
text = "7. Agrupamento (Clustering)
"

[node name="TomDeci" type="Button" parent="Botoes/BotInfo"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 25
text = "8. Tomada de decisão baseada em IA
"

[node name="Voltar" type="Button" parent="."]
layout_mode = 0
offset_left = 15.0
offset_top = 814.0
offset_right = 184.0
offset_bottom = 888.0
text = "Voltar"

[node name="VoltarMenu" type="Button" parent="."]
layout_mode = 0
offset_left = 30.0
offset_top = 13.0
offset_right = 175.0
offset_bottom = 65.0
text = "Menu Principal"
